Align date explain with Drupal message colouring scheme.

--- a/css/rng_date_scheduler.css
+++ b/css/rng_date_scheduler.css
@@ -2,10 +2,12 @@ table.rng-date-scheduler-explain {
   table-layout: fixed;
 }
 table.rng-date-scheduler-explain .forbidden {
-  background-color: #f77;
+  background-color: #fcf4f2;
+  color: #a51b00;
 }
 table.rng-date-scheduler-explain .neutral {
-  background-color: #fff;
+  background-color: #fdf8ed;
+  color: #734c00;
 }
 table.rng-date-scheduler-explain tr.current-indicator {
   background-color: transparent;
